# automotive-message-broker

./: .gbs.conf  CMakeLists.txt  COPYING  Doxyfile.idl.in  Doxyfile.in  README  README.md  RELEASE  RELEASE.in.md  RELEASE.md  TODO  amb.manifest  ambd.conf.upstart  automotive-message-broker.odp  cmake_uninstall.cmake  config  configsink  configsource  index.html  main.cpp  nobdy2.kdev4
ambd/: CMakeLists.txt  ambd.in  ambd.service  config  config.in  config.in.json  core.cpp  core.h  glibmainloop.cpp  glibmainloop.h  imainloop.h  main.cpp  pluginloader.cpp  pluginloader.h  qtmainloop.cpp  qtmainloop.h
docs/: CMakeLists.txt  Doxyfile.idl.in  Doxyfile.in  Doxyfile.mainpage.in  README  Vehicle Information API Spec.html  amb.fidl  amb.idl  amb.in.fidl  amb.in.idl  ambd-configuration.in.idl  ambd.in.md  dbus.idl  drivingsafety.txt  electricvehicle.txt  environment.txt  libamb.in  libamb.in.h  mainpage.in.idl  maintenance.txt  manager.txt  parking.txt  personalization.txt  runningstatus.txt  vehicle.widl  vehicle_spec.html  vehicleinfo.txt
docs/amb/: README
examples/: CMakeLists.txt  bluemonkeyconfig  bluetooth.in.json  cangenconfig  cangenconfig.in  cangenconfig.in.json  chrony.in.json  configobdsource  configwebsocketsink  configwebsocketsource  configwheel  configwheel.in  configwheel.in.json  databaseconfig  databaseconfig.in  databaselogging.in.json  databasesource  databasesource.in  databasesource.in.json  databasewebsocketsink.in.json  dbusconfig  dbusconfig.in.json  democonfig  exampleconfig  exampleconfig.in.json  gpsdconfig  gpsnmea  gpsnmea.in.json  obd2datalog  obdsourceconfig  obdsourceconfig.in  obdsourceconfig.in.json  opencvconfig  opencvdbusconfig  opencvdbusconfig.in  opencvdbusconfig.in.json  opencvluxconfig  opencvluxconfig.in.json  openxc  openxcconfig  (+16 more)
examples/bluemonkey/: authSettings.js  bluemonkeyconfig  bluemonkeyconfig.in  bluemonkeyconfig.in.json  config.js
lib/: .runningstatusinterface.cpp.kate-swp  CMakeLists.txt  CMakeLists.txt~  abstractdbusinterface.cpp  abstractdbusinterface.h  abstractproperty.cpp  abstractproperty.h  abstractpropertytype.cpp  abstractpropertytype.h  abstractroutingengine.cpp  abstractroutingengine.h  abstractsink.cpp  abstractsink.h  abstractsource.cpp  abstractsource.h  accelerationproperty.cpp  accelerationproperty.h  ambclient.cpp  ambclient.h  ambplugin.h  ambpluginimpl.cpp  ambpluginimpl.h  asyncqueue.hpp  automotive-message-broker.pc.in  chime.cpp  chime.h  cruisecontrolstatus.cpp  cruisecontrolstatus.h  dbusclient.cpp  dbusclient.h  dbusinterfacemanager.cpp  dbusinterfacemanager.h  debugout.cpp  debugout.h  enginecoolantproperty.cpp  enginecoolantproperty.h  engineoilproperty.cpp  engineoilproperty.h  enginespeedproperty.cpp  enginespeedproperty.h  (+46 more)
lib/propertytypes/: AntilockBrackingSytemStatus.h~  VehicleSpeed.h~  VehicleType.h  VehicleType.h~  abstractproperty.cpp~  abstractproperty.h  vehiclespeed.cpp  vehiclespeed.h
plugins/: CMakeLists.txt  CMakeLists.txt~  exampleplugin.cpp  exampleplugin.cpp~  exampleplugin.h  exampleplugins.README.txt  examplesink.cpp  examplesink.h  examplesink.in.json  examplesource.in.json  nobdycompatplugin.cpp  nobdycompatplugin.cpp~  nobdycompatplugin.h  nobdycompatplugin.h~  plugins.in.idl
plugins/bluemonkey/: CMakeLists.txt  Doxyfile.in  README  agent.cpp  agent.h  amb.cpp  amb.h  authSettings.js  authenticate.cpp  authenticate.h  ble.cpp  ble.h  bluemonkey.cpp  bluemonkey.h  bluemonkey.in.idl  bluemonkey.in.json  bluemonkeynode.cpp  bmconfig.js  bmdbus.cpp  bmdbus.h  bmdbus_p.h  bmws.cpp  bmws.h  bmws.js  config.js  customPrograms.js  db.cpp  db.h  ircSettings.js  irccoms.cpp  irccoms.h
plugins/bluetooth/: CMakeLists.txt  ambbt.conf  bluetooth.in.json  bluetoothplugin.cpp  bluetoothplugin.h  testAmbBt.cpp
plugins/cangenplugin/: CMakeLists.txt  cangenplugin.cpp  cangenplugin.h  websockets.cpp  websockets.h
plugins/cansimplugin/: CMakeLists.txt  cansimplugin.cpp  cansimplugin.h
plugins/chrony/: CMakeLists.txt  README  chrony.cpp  chrony.h  chrony.in.json
plugins/common/: CMakeLists.txt  abstractdbusinterface.cpp  abstractdbusinterface.h  abstractio.hpp  amb-plugins-common.pc.in  ambplugin.h  ambpluginimpl.cpp  ambpluginimpl.h  bluetooth.hpp  bluetooth5.cpp  bluetooth5.h  bluetoothadapterproxy.c  bluetoothmanagerproxy.h  bluetoothserialproxy.c  bluetoothserialproxy.h  canadapter.cpp  canadapter.h  canbus.h  canbusimpl.cpp  canbusimpl.h  canframeinfo.h  canobserver.h  cansocket.cpp  cansocket.h  cansocketadapter.cpp  cansocketadapter.h  cansocketbcm.cpp  cansocketbcm.h  cansocketraw.cpp  cansocketraw.h  cansocketreader.cpp  cansocketreader.h  dbusexport.cpp  dbusexport.h  dbusexport.hpp  dbusplugin.cpp  dbusplugin.h  dbussignaller.cpp  dbussignaller.h  jsonprotocol.cpp  (+10 more)
plugins/database/: CMakeLists.txt  README  basedb.hpp  baseobject.h  database.in.json  databasesink.cpp  databasesink.h  sqlitedatabase.cpp  sqlitedatabase.h  sqlitequery.cpp  sqlitequery.h  utils.cpp  utils.h
plugins/dbus/: CMakeLists.txt  README  abstractdbusinterface.cpp  abstractdbusinterface.h  abstractproperty.cpp  abstractproperty.h  accelerationproperty.cpp  accelerationproperty.h  amb.conf  amb.idl  automotivemanager.cpp  automotivemanager.h  basicproperty.cpp  basicproperty.h  custompropertyinterface.cpp  custompropertyinterface.h  dbus.in.json  dbusinterfacemanager.cpp  dbusinterfacemanager.h  dbusplugin.cpp  dbusplugin.h  dbussignaller.h  dbussignaller.hpp  drivingsafety.cpp  drivingsafety.h  environmentproperties.cpp  environmentproperties.h  fakeidlheader.h  maintenance.cpp  maintenance.h  parking.h  personalization.cpp  personalization.h  (+8 more)
tests/: CMakeLists.txt  amb-get-history.py  amb-get.py  amb-listen  amb-listen.py  amb-set  amb-set.py  gen-set  gendb.sh  testProtocol.cpp  testProtocolClient.cpp  testProtocolCommon.h  testRunningStatus.py  testing
tools/: CMakeLists.txt  ambctl.py  ambctl.py.orig  genmapping.py
xwalk/: CMakeLists.txt  vehicle.cc  vehicle.h  vehicle.html  vehicle_api.cc  vehicle_api.js  vehicle_extension.cc  vehicle_extension.h  vehicle_instance.cc  vehicle_instance.h
(+3459 files in other folders)
